[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling library
anyhow = "1.0"

# Asynchronous traits
async-trait = "0.1"

# Time handling library
chrono = { version = "0.4", features = ["serde"] }

# Serialization and deserialization library
serde = { version = "1.0", features = ["derive"] }
