[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
domain = { path = "../domain" }

# Error handling library
anyhow = "1.0"

# Asynchronous traits
async-trait = "0.1"

# Serialization and deserialization library
serde_json = "1.0"

# Tokio for asynchronous programming
tokio = { version = "1", features = ["sync"] }

# Add moka for high-performance in-memory caching
moka = { version = "0.12", features = ["future"] }
